Use some more appropriate data structures in a few places.